Re-designed and added About me page, flight app, and weather a pp

--- a/index.html
+++ b/index.html
@@ -3,17 +3,31 @@
     <head>
         <meta charset="utf-8"/>
         <title>Dyl's Webpage</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css" />
-		<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
 		<script src="https://unpkg.com/vue@next"></script>
 
     
     </head>
 
     <body>
-		<div class="title">
-		<h1>&nbsp;WELCOME&nbsp; </h1>
-		</div>
+		<div>
+      <div id="menuDiv">
+      <img src="img/profile.png" id="topLeft">
+      <div class="square-box">
+        <a href="index.html" ><p>HOME</p></a>
+        <a href="templates/about.html" ><p>ABOUT ME</p></a>
+        <a href="templates/history.html" ><p>WORK HISTORY</p></a>
+        <a href="templates/flights.html" ><p>FLIGHT PRICE APP</p></a>
+        <a href="templates/weather.html" ><p>5 DAY FORCAST APP</p></a>
+        <a href="mailto: dyl2elite@gmail.com" ><p>EMAIL ME</p></a>
+        <a href="assets/Resume-March2022.pdf" download="Dylan Spencer Resume"><p>DOWNLOAD RESUME</p></a>
+      </div>
+    </div>
+    <div id="mainDiv">
+		  <h1 class="title">&nbsp;WELCOME&nbsp; </h1>
+    </div>
+	</div>
 	</body>
 </html>
 
