--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="templates/history.html" ><p>WORK HISTORY</p></a>
         <a href="templates/flights.html" ><p>FLIGHT PRICE APP</p></a>
         <a href="templates/weather.html" ><p>5 DAY FORCAST APP</p></a>
+        <a href="templates/calculator.html"><p>ALL JS CALCULATOR</p></a>
         <a href="mailto: dyl2elite@gmail.com" ><p>EMAIL ME</p></a>
         <a href="assets/Resume-March2022.pdf" download="Dylan Spencer Resume"><p>DOWNLOAD RESUME</p></a>
       </div>
