added work page and not working form to vote for 2 truths and alie

--- a/index.html
+++ b/index.html
@@ -27,6 +27,31 @@
     </div>
     <div id="mainDiv">
 		  <h1 class="title">&nbsp;WELCOME&nbsp; </h1>
+      <div class="title">
+       <p> This is the webpage of Dylan Spencer. Here are the features on the side:</p>
+        <ul>
+          <li>About Me -- Introductory page about Dylan Spencer</li>
+          <li>Work History -- A list of all the places I have worked</li>
+          <li>Flight price App -- this is a web application I'm currently working on 
+            checks flight prices and data out of Utah from the various Airports in Utah. 
+            I'm still working on the API and data transfer, so there is just an example of
+            what it will look like in the end right now.
+          </li>
+          <li>5 day forecast -- This is a Web app that uses vue.js and shows the 5 day forcast 
+            for the area of the IP address of the user. It shows the weather perdictions for in 3 hour 
+            increments.
+          </li>
+          <li>All JS calculator -- This is a calculator App made completely out of javascript and no html. 
+            The html file calls the javascript code and it does the rest. 
+          </li>
+          <li>Email me -- Opens up your default email editor to send me an email for job offers and suggestions</li>
+          <li>Download resume -- You probably found this through my resume, but if you needed a copy you can download it 
+            with this link. It was last updated March 2022.
+          </li>
+        </ul>
+      
+
+      </div>    
     </div>
 	</div>
 	</body>
