added docs/assets/images folder for image files

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <body>
 		<div>
       <div id="menuDiv">
-      <img src="img/profile.png" id="topLeft">
-      <div class="square-box">
+        <img src="docs/assets/images/profile.png" id="topLeft">
+        <div class="square-box">
         <a href="https://dylando22.github.io/index.html" ><p>HOME</p></a>
         <a href="https://dylando22.github.io/templates/about.html" ><p>ABOUT ME</p></a>
         <a href="https://dylando22.github.io/templates/history.html" ><p>WORK HISTORY</p></a>
