--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
 		<div>
       <div id="menuDiv">
-        <img src="docs/assets/images/profile.png" id="topLeft">
+        <img src="docs/assets/images/profile.PNG" id="topLeft" alt="Profile Picture">
         <div class="square-box">
         <a href="https://dylando22.github.io/index.html" ><p>HOME</p></a>
         <a href="https://dylando22.github.io/templates/about.html" ><p>ABOUT ME</p></a>
