--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="style/style.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="js/index.js"></script>
+        <link rel="shortcut icon" type="image/x-icon" href="docs/assets/images/favicon.io.png">
 
     </head>
 
