added url to new site

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="templates/flights.html" target="_blank">Flights App</a>
                     </div>
                 </li>
-
+                <li><a href="https://Dylando22.github.io/my-site" >New Site</a></li>
             </ul>
         </nav>
         <RightsideBar id="RightList">
