fixed mobile view

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="docs/assets/resume.pdf" download="Dylan Spencer Resume">Download Resume</a></li>
+                <li><a href="docs/assets/resume.pdf" download="Dylan Spencer Resume">Resume</a></li>
                 <li><a href="mailto: dyl2elite@gmail.com"><i class="fa fa-envelope"></i></a></li>
+                <li><a href="https://Dylando22.github.io/my-site" >New Site</a></li>
                 <li class="dropDown" style="float:right;"><a href="javascript:void(0)" class="dropButton">Projects</a>
                     <div class="dropdown-content">
                         <a href="templates/calculator.html" target="_blank">Full JS calculator</a>
@@ -26,7 +27,6 @@
                         <a href="templates/flights.html" target="_blank">Flights App</a>
                     </div>
                 </li>
-                <li><a href="https://Dylando22.github.io/my-site" >New Site</a></li>
             </ul>
         </nav>
         <RightsideBar id="RightList">
