updated styling again

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="docs/assets/resume.pdf" download="Dylan Spencer Resume">Resume</a></li>
                 <li><a href="mailto: dyl2elite@gmail.com"><i class="fa fa-envelope"></i></a></li>
-                <li><a href="https://Dylando22.github.io/my-site" >New Site</a></li>
                 <li class="dropDown" style="float:right;"><a href="javascript:void(0)" class="dropButton">Projects</a>
                     <div class="dropdown-content">
                         <a href="templates/calculator.html" target="_blank">Full JS calculator</a>
@@ -45,6 +44,8 @@
                 <li><button id="aboutButton" onclick="goAboutMe()">About Me</button></li>
                 <li><button id='workButton' onclick="goHistory()" >Work History</button></li>
                 <li><button id='jokeButton' onclick="getJoke()">Joke of the Day</button></li>
+                <li><button><a href="https://Dylando22.github.io/my-site" >New Site</a></button></li>
+
             </ul>
         </LeftSideBar>
         <header>
